--- a/settings.gradle
+++ b/settings.gradle
@@ -1,4 +1,5 @@
-include ':NDKModule'
+include ':NDKModule', ':PluginLibrary'
 include ':CommonApp'
 include ':RecyclerAdapter'
 include ':UiTreeModule'
+include':hearttreelib'
